--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -9,7 +9,7 @@
 
     <h2>Bonjour <span th:text="${user.nom}"></span> !</h2>
 
-    <a href="/home">Se déconnecter</a>
+	<a href="/logout">Se déconnecter</a>
 
     <h3>Mes Commandes</h3>
 
