--- a/src/main/resources/templates/store/home.html
+++ b/src/main/resources/templates/store/home.html
@@ -8,7 +8,7 @@
 <body>
 
     <h2>Connexion</h2>
-    <form action="/authenticate" method="POST">
+    <form action="/store/authenticate" method="POST">
         <label for="email">Email :</label>
         <input type="email" id="email" name="email" required><br><br>
 
@@ -19,7 +19,7 @@
     </form>
 
     <h2>Créer un compte</h2>
-    <form action="/register" method="POST">
+    <form action="/store/register" method="POST">
         <label for="email">Email :</label>
         <input type="email" id="new-email" name="email" required><br><br>
 
