--- a/src/main/resources/templates/store/user.html
+++ b/src/main/resources/templates/store/user.html
@@ -14,7 +14,7 @@
     <h3>Mes Commandes</h3>
 
     <!-- Formulaire pour créer une nouvelle commande -->
-    <form action="/commandes/ajouter" method="post">
+    <form action="/store/commandes/ajouter" method="post">
         <input type="text" name="description" placeholder="Description de la commande" required>
         <button type="submit">Créer Commande</button>
     </form>
@@ -25,7 +25,7 @@
         <ul>
             <li th:each="commande : ${commandes}">
                 <span th:text="${commande.description}"></span>
-                <a th:href="@{/commandes/{commandeId}(commandeId=${commande.id})}">Voir et ajouter des produits</a>
+                <a th:href="@{/store/commandes/{commandeId}(commandeId=${commande.id})}">Voir et ajouter des produits</a>
             </li>
         </ul>
     </div>
